# openharmony-ability

./: .gitignore  Cargo.toml  README.md  READNE.md
.github/workflows/: pr.yml
ability_rust/: README.md  index.ets  oh-package-lock.json5  oh-package.json5
ability_rust/src/main/cpp/: CMakeLists.txt
ability_rust/src/main/ets/ability/: RustAbility.ets
ability_rust/src/main/ets/components/: DefaultXComponent.ets  MainPage.ets
ability_rust/src/main/ets/webview/: DefaultWebview.ets  Utils.ets
ability_rust/src/ohosTest/: module.json5
crates/ability/: Cargo.toml  README.md
crates/ability/src/: app.rs  error.rs  event.rs  lib.rs  lifecycle.rs  render.rs  resource.rs  waker.rs
crates/ability/src/area/: avoid.rs  mod.rs  rect.rs  rect_reason.rs  size.rs
crates/ability/src/configuration/: color_mode.rs  config.rs  direction.rs  mod.rs  screen_density.rs
crates/ability/src/draw/: mod.rs
crates/ability/src/helper/: ark.rs  mod.rs  permission.rs  webview.rs  window_info.rs
crates/ability/src/hook/: mod.rs  window_info.rs
crates/ability/src/input/: ime.rs  mod.rs  text_input.rs
crates/ability/src/memory/: mod.rs
crates/ability/src/render/: mod.rs  web.rs  xcomponent.rs
crates/ability/src/webview/: drag.rs  mod.rs
crates/acticity/: Cargo.toml
crates/acticity/src/: app.rs
crates/activity/: Cargo.toml
crates/activity/src/: app.rs  event.rs  lib.rs  lifecycle.rs  render.rs
crates/activity/src/area/: mod.rs  rect.rs  rect_reason.rs
crates/activity/src/configuration/: color_mode.rs  config.rs  direction.rs  screen_density.rs
crates/activity/src/memory/: mod.rs
crates/activity/src/stage/: event.rs
crates/derive/: Cargo.toml  README.md
crates/derive/src/: lib.rs
demo/: build-profile.json5
demo/AppScope/: app.json5
demo/AppScope/resources/base/element/: string.json
demo/entry/: oh-package-lock.json5  oh-package.json5
demo/entry/src/main/: module.json5
demo/entry/src/main/cpp/types/libark_web/: Index.d.ts  oh-package.json5
demo/entry/src/main/cpp/types/libdemo_native/: Index.d.ts  oh-package.json5
demo/entry/src/main/ets/entryability/: EntryAbility.ets
demo/entry/src/main/ets/pages/: Index.ets
demo/entry/src/main/resources/base/element/: string.json
demo/entry/src/main/resources/zh_CN/element/: string.json
example/: .gitignore  Cargo.toml  build-profile.json5
example/ability_rust/: index.ets  oh-package-lock.json5  oh-package.json5
example/ability_rust/src/main/cpp/: napi_init.cpp
example/ability_rust/src/main/ets/ability/: RustAbility.ets  type.ets
example/ability_rust/src/main/ets/components/: DefaultXComponent.ets  MainPage.ets
example/ability_rust/src/main/ets/helper/: os.ets
example/entry/: oh-package-lock.json5  oh-package.json5
example/entry/src/main/cpp/types/libexample/: Index.d.ts
example/entry/src/main/ets/entryability/: EntryAbility.ets
example/entry/src/main/ets/pages/: Index.ets
example/src/: lib.rs
native_ability/: README.md  oh-package-lock.json5
native_ability/src/main/cpp/: CMakeLists.txt  napi_init.cpp
native_ability/src/main/cpp/types/libnative_ability/: oh-package.json5
native_ability/src/main/ets/ability/: NativeAbility.ets  type.ets
native_ability/src/main/ets/components/: DefaultXComponent.ets  MainPage.ets
native_ability/src/main/ets/webview/: DefaultWebview.ets  Utils.ets
native_ability/src/ohosTest/: module.json5
package/: CHANGELOG.md  README.md  index.ets  oh-package.json5
package/src/main/: module.json5
rust_ability/: build-profile.json5  oh-package.json5
rust_ability/AppScope/: app.json5
rust_ability/AppScope/resources/base/element/: string.json
rust_ability/ability_rust/: BuildProfile.ets  README.md  build-profile.json5  index.ets  oh-package-lock.json5  oh-package.json5
rust_ability/ability_rust/src/main/: module.json5
rust_ability/ability_rust/src/main/cpp/types/libability_rust/: oh-package.json5
rust_ability/ability_rust/src/main/ets/ability/: RustAbility.ets  type.ets
rust_ability/ability_rust/src/main/ets/components/: DefaultXComponent.ets  MainPage.ets
rust_ability/ability_rust/src/main/ets/helper/: index.ets  loadable.ets  object.ts  permission.ets  random.ets
rust_ability/ability_rust/src/main/ets/webview/: DefaultPage.ets  DefaultWebview.ets  Utils.ets
rust_ability/entry/src/main/cpp/: CMakeLists.txt
rust_ability/entry/src/main/ets/entryability/: EntryAbility.ets
rust_ability/entry/src/main/ets/pages/: Index.ets
rust_ability/entry/src/mock/: Libentry.mock.ets
rust_example/demo_native/: Cargo.toml
rust_example/demo_native/src/: lib.rs
rust_example/webview_example/: Cargo.toml
rust_example/webview_example/scripts/: devtools.sh
rust_example/webview_example/src/: index.html  lib.rs
rust_example/xcomponent_example/: Cargo.toml
rust_example/xcomponent_example/src/: lib.rs
scripts/: pack.sh
webview_example/: build-profile.json5
webview_example/AppScope/resources/base/element/: string.json
webview_example/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
webview_example/entry/src/main/: module.json5
webview_example/entry/src/main/cpp/types/libark_web/: Index.d.ts  oh-package.json5
webview_example/entry/src/main/cpp/types/libexample/: Index.d.ts  oh-package.json5
webview_example/entry/src/main/cpp/types/libwebview_example/: Index.d.ts  oh-package.json5
webview_example/entry/src/main/ets/entryability/: EntryAbility.ets
webview_example/entry/src/main/ets/pages/: Index.ets
xcomponent_example/: build-profile.json5
xcomponent_example/AppScope/: app.json5
xcomponent_example/AppScope/resources/base/element/: string.json
xcomponent_example/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
xcomponent_example/entry/src/main/: module.json5
xcomponent_example/entry/src/main/cpp/: CMakeLists.txt
xcomponent_example/entry/src/main/cpp/types/libexample/: Index.d.ts  oh-package.json5
xcomponent_example/entry/src/main/ets/entryability/: EntryAbility.ets
xcomponent_example/entry/src/main/ets/pages/: Index.ets
(+2 files in other folders)
