[workspace]
members = ["crates/*", "rust_example/*"]
resolver = "2"

[workspace.dependencies]
openharmony-ability-derive = { version = "0.1.5-beta.0", path = "crates/derive" }
openharmony-ability = { version = "0.1.5-beta.0", path = "crates/ability" }

napi-sys-ohos = { path = "../ohos-rs/crates/sys", features = ["napi8"] }
napi-ohos = { path = "../ohos-rs/crates/napi"}
napi-derive-ohos = { path = "../ohos-rs/crates/macro" }
napi-build-ohos = { path = "../ohos-rs/crates/build" }

syn = { version = "2", features = ["fold", "full", "extra-traits"] }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }

ohos-arkui-binding = { path ="../ohos-native-bindings/crates/arkui" }
ohos-xcomponent-binding = { path ="../ohos-native-bindings/crates/xcomponent" }
ohos-ime-binding = { path ="../ohos-native-bindings/crates/ime" }
ohos-display-binding = { path ="../ohos-native-bindings/crates/display" }
ohos-display-soloist-binding = { path ="../ohos-native-bindings/crates/native_display_soloist" }
ohos-web-binding = { path ="../ohos-native-bindings/crates/web" }


papaya = { version = "0.2" }
