[workspace]
members = ["crates/*", "rust_example/*"]
resolver = "2"

[workspace.dependencies]
openharmony-ability-derive = { version = "0.1.5-beta.0", path = "crates/derive" }
openharmony-ability = { version = "0.1.5-beta.0", path = "crates/ability" }

napi-sys-ohos = { version = "1.0", features = ["napi8"] }
napi-ohos = { version = "1.0" }
napi-derive-ohos = { version = "1.0" }
napi-build-ohos = { version = "1.0" }

syn = { version = "2", features = ["fold", "full", "extra-traits"] }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }

ohos-arkui-binding = { version = "0.0.4" }
ohos-xcomponent-binding = { version = "0.0.6" }
ohos-ime-binding = { version = "0.1" }
ohos-display-binding = { version = "0.0.1" }
ohos-display-soloist-binding = { version = "0.1" }
# ohos-web-binding = { git = "https://github.com/ohos-rs/ohos-native-bindings.git" }
ohos-web-binding = { path = "../ohos-native-bindings/crates/web" }

http = {version = "1.1"}
