[workspace]
members = ["crates/*", "rust_example/*"]
resolver = "2"

[workspace.dependencies]
openharmony-ability-derive = { version = "0.3.0", path = "crates/derive" }
openharmony-ability = { version = "0.3.0", path = "crates/ability" }

napi-sys-ohos = { version = "1.1", features = ["napi8"] }
napi-ohos = { version = "1.1" }
napi-derive-ohos = { version = "1.1" }
napi-build-ohos = { version = "1.1" }

syn = { version = "2", features = ["fold", "full", "extra-traits"] }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }
darling = { version = "0.21" }

ohos-arkui-binding = { version = "0.0.5" }
ohos-xcomponent-binding = { version = "0.1" }
ohos-ime-binding = { version = "0.1" }
ohos-display-binding = { version = "0.0.1" }
ohos-web-binding = { version = "0.1"}

http = { version = "1.1" }
