[package]
name = "openharmony-ability"
version = "0.0.1"
edition = "2021"

[dependencies]
napi-ohos = { workspace = true, default-features = false, features = [
    "napi8",
    "async",
] }
napi-derive-ohos = { workspace = true }
ohos-arkui-binding = { workspace = true, features = ["napi"] }
ohos-xcomponent-binding = { workspace = true }
ohos-vsync-binding = { workspace = true }
ohos-ime-binding = { workspace = true }

ohos-hilog-binding = { version = "*" }
