[package]
name = "openharmony-ability"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Binding Rust application on Harmony with Ability"

[dependencies]
napi-ohos = { workspace = true, default-features = false, features = [
  "napi8",
  "async",
] }
napi-derive-ohos = { workspace = true }
ohos-arkui-binding = { workspace = true, features = ["napi"] }
ohos-xcomponent-binding = { workspace = true }
ohos-ime-binding = { workspace = true }
ohos-display-binding = { workspace = true }
