[package]
name = "openharmony-ability"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Binding Rust application on Harmony with Ability"

[features]
default = []
drag_and_drop = []
webview = [
  "dep:ohos-display-soloist-binding",
  "dep:ohos-web-binding",
  "dep:http",
]

[dependencies]
# for napi binding
napi-ohos = { workspace = true, default-features = false, features = [
  "napi8",
  "async",
] }
napi-derive-ohos = { workspace = true }

# for xcomponent native render
ohos-arkui-binding = { workspace = true, features = ["napi"] }
ohos-xcomponent-binding = { workspace = true }
ohos-ime-binding = { workspace = true }
ohos-display-binding = { workspace = true }

# for webview feature
ohos-display-soloist-binding = { workspace = true, optional = true }
ohos-web-binding = { workspace = true, optional = true }
http = { workspace = true, optional = true }
