[package]
name = "openharmony-ability-derive"
version = "0.1.4"
edition = "2021"
license     = "MIT OR Apache-2.0"
description = "Binding Rust application macro on Harmony with Ability"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
