[package]
name = "xcomponent_example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { workspace = true, features = ["tokio_rt"] }
napi-derive-ohos = { workspace = true }

openharmony-ability = { workspace = true }
openharmony-ability-derive = { workspace = true }
ohos-hilog-binding = { version = "*" }
futures-executor = "0.3"

[build-dependencies]
napi-build-ohos = { workspace = true }

[profile.release]
lto = true
